<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/bg1">

    <TextView
        android:text="@string/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="arial"
        android:textColor="#FFFFFF"
        android:textSize="43dp"
        android:textStyle="bold"
        android:gravity="center|top"
        android:shadowColor="#F00000"
        android:shadowDx="12"
        android:shadowDy="12"
        android:shadowRadius="0.02"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
            android:text="@string/main_activity_description_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:gravity="center"
            android:shadowColor="#000000"
            android:shadowDx="7"
            android:shadowDy="7"
            android:shadowRadius="0.04"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="25dp"
            android:orientation="vertical">

        <Button
        android:background="@drawable/button1"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/view_branching_fractal_button_text"
        android:onClick="loadBranchingFractalView"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="25dp"
        android:orientation="vertical">

            <Button
                android:textColor="#FFFFFF"
                android:background="@drawable/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/view_triangle_fractal_button_text"
                android:onClick="loadTriangleFractalView"/>
    </LinearLayout>

    </LinearLayout>


